[tool.poetry]
authors = ["Oliver Borchert <borchero@icloud.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Traditional GPU-Accelerated Machine Learning Models in PyTorch."
documentation = "https://pycave.borchero.com"
license = "MIT"
name = "pycave"
readme = "README.md"
repository = "https://github.com/borchero/pycave"
version = "3.0.0"

[tool.poetry.dependencies]
numpy = "^1.20.3"
python = "^3.8"
pytorch-lightning = "^1.3.5"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.2"
black = "^21.6b0"
isort = "^5.8.0"
pydata-sphinx-theme = "^0.6.3"
pylint = "^2.8.3"
pytest = "^6.2.4"
scanpydoc = "^0.7.1"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-automodapi = "^0.13"
sphinx-copybutton = "^0.3.3"
sphinxcontrib-spelling = "^7.2.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.messages_control]
disable = [
  "duplicate-code",
  "missing-module-docstring",
  "invalid-name",
  "no-self-use",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-instance-attributes",
]

[tool.pylint.typecheck]
generated-members = [
  "torch.*",
]

[tool.pyright]
stubPath = ""
typeCheckingMode = "strict"

[tool.black]
line-length = 99

[tool.isort]
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
known_first_party = "pycave"
line_length = 99
lines_between_sections = 0
profile = "black"
skip_gitignore = true
