[tool.poetry]
authors = ["Oliver Borchert <me@borchero.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Traditional Machine Learning Models in PyTorch."
documentation = "https://pycave.borchero.com"
license = "MIT"
name = "pycave"
readme = "README.md"
repository = "https://github.com/borchero/pycave"
version = "0.0.0"

[tool.poetry.dependencies]
lightkit = "^0.5.0"
numpy = "^1.20.3"
python = ">=3.8,<3.11"
pytorch-lightning = "^1.6.0"
torch = "^1.8.0"
torchmetrics = "^0.6.0"

[tool.poetry.group.pre-commit.dependencies]
black = "^22.12.0"
docformatter = "^1.5.0"
isort = "^5.10.1"
mypy = "^0.991"
pylint = "^2.12.2"
pyupgrade = "^3.3.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.0"
pydata-sphinx-theme = "^0.7.2"
scanpydoc = "^0.7.1"
sphinx-autodoc-typehints = "^1.12.0"
sphinx-automodapi = "^0.13"
sphinx-copybutton = "^0.3.3"
sphinxcontrib-spelling = "^7.2.1"

[tool.poetry.group.testing.dependencies]
flaky = "^3.7.0"
pytest = "^6.2.4"
pytest-benchmark = "^3.4.1"
scikit-learn = "^0.24.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.messages_control]
disable = [
  "arguments-differ",
  "duplicate-code",
  "missing-module-docstring",
  "invalid-name",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-branches",
  "too-many-locals",
  "too-many-instance-attributes",
]

[tool.pylint.typecheck]
generated-members = [
  "torch.*",
]

[tool.black]
line-length = 99
target-version = ["py38", "py39", "py310"]

[tool.isort]
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
known_first_party = "pycave,tests"
line_length = 99
lines_between_sections = 0
profile = "black"
skip_gitignore = true

[tool.docformatter]
make-summary-multi-line = true
pre-summary-newline = true
recursive = true
wrap-descriptions = 99
wrap-summaries = 99

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*Create unlinked descriptors is going to go away.*:DeprecationWarning",
  "ignore:.*this fit will run with no optimizer.*",
  "ignore:.*Consider increasing the value of the `num_workers` argument.*",
]
